--- a/demo2.html
+++ b/demo2.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>交叉观察器</title>
+    <title>更好的演示</title>
 </head>
 <body>
 
@@ -71,7 +71,7 @@
 
     #wrap{
         position: fixed;
-        border: #9b59b6 solid 4px;
+        border: #e74c3c solid 4px;
         top: 200px;
         bottom: 200px;
         left: 200px;
